Fix stacking contexts (Z-Index) in Bootstrap 5 for class hero-shape

--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -2,113 +2,32 @@
   position: relative;
   padding-block: 150px 80px;
   overflow: hidden;
-  @include desktop {
-    text-align: center;
-  }
-  @include tablet {
-    padding-block: 120px 80px;
-  }
-  @include mobile {
-    padding-block: 100px 50px;
-  }
+  z-index: 1; // Creates a stack context
+
   &-shape {
     position: absolute;
     width: 100%;
     inset-block-start: 0;
     inset-inline-start: 0;
+    z-index: -1; // Pushes the shape behind the content
+    pointer-events: none; // Prevents SVG from blocking clicks on buttons
+
     svg {
       position: absolute;
       inset-block-start: 0;
       inset-inline-end: 0;
       width: 65%;
-    }
-  }
 
-  &-content {
-    &-subtitle {
-      font-size: 14px;
-      font-weight: 400;
-      color: $primary-color;
-      text-transform: uppercase;
-      margin-block-end: 10px;
-      display: inline-block;
-      letter-spacing: 3px;
-    }
-
-    h1 {
-      margin-block-end: 25px;
-      @include tablet {
-        font-size: 50px;
-        line-height: 52px;
-      }
-    }
-
-    p {
-      font-size: 17px;
-      line-height: 37px;
-      font-weight: 400;
-      margin-block-end: 40px;
-      @include mobile {
-        font-size: 16px;
-        line-height: 28px;
-      }
-    }
-
-    &-buttons {
-      padding-inline-start: 0;
-      margin: 0;
-      list-style: none;
-
-      li {
-        display: inline-block;
-
-        &:not(:last-child) {
-          margin-inline-end: 15px;
-          @include mobile {
-            margin-inline-end: 0;
-            margin-block-end: 20px;
-          }
-        }
-        @include mobile {
-          display: block;
-        }
+      circle {
+        fill: $secondary-color-transparent; 
+        transition: fill 0.3s ease;
       }
     }
   }
 
-  &-image {
-    margin: -40px;
-    img {
-      max-width: 120%;
-      max-height: 120%;
-      padding-block-end: 19%;
-    }
-    @include desktop {
-      margin-block: 0 40px;
-      margin-inline: auto;
-      width: 70%;
-    }
-    @include tablet {
-      width: 80%;
-    }
-    @include mobile {
-      width: 100%;
-      margin-block-end: 20px;
-    }
-  }
-
-  &-svg-icon {
-    position: absolute;
-    inset-block-start: 0;
-    inset-inline-end: -505px;
-    width: 99%;
-
-    svg {
-      path {
-        &:first-child {
-          fill: $text-color;
-        }
-      }
-    }
+  // Ensure that the text/image container is above it
+  .container {
+    position: relative;
+    z-index: 2;
   }
 }
